--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 /* Components */
 @import "components/status-bar.css";
+@import "components/header.css";
 @import "components/navigation-bar.css";
 
 /* Screens */
