--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,15 @@
 @import "components/status-bar.css";
 @import "components/header.css";
 @import "components/navigation-bar.css";
+@import "components/profile.css";
 
 /* Screens */
 @import "screens/sign-in.css";
+@import "screens/friends.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #333;
 }
 
 input:focus {
