--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 /* Screens */
 @import "screens/sign-in.css";
 @import "screens/friends.css";
+@import "screens/search.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
