--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,13 @@
 @import "components/navigation-bar.css";
 @import "components/profile.css";
 @import "components/notification.css";
+@import "components/icon-row.css";
 
 /* Screens */
 @import "screens/sign-in.css";
 @import "screens/friends.css";
 @import "screens/search.css";
+@import "screens/more.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
