--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 /* Components */
 @import "components/status-bar.css";
 @import "components/header.css";
+@import "components/subheader.css";
 @import "components/navigation-bar.css";
 @import "components/profile.css";
 @import "components/notification.css";
@@ -13,6 +14,7 @@
 @import "screens/friends.css";
 @import "screens/search.css";
 @import "screens/more.css";
+@import "screens/settings.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -26,4 +28,8 @@ input:focus {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
