--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 @import "screens/search.css";
 @import "screens/more.css";
 @import "screens/settings.css";
+@import "screens/chat.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -32,4 +33,9 @@ a {
 
 li {
   list-style: none;
+}
+
+button {
+  border: none;
+  cursor: pointer;
 }
