--- a/css/components/header.css
+++ b/css/components/header.css
@@ -13,3 +13,17 @@
 .header__icons span {
   margin-left: 1rem;
 }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.header__icons .fa-gear:hover {
+  animation: rotate 3s linear infinite;
+}
