--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -22,3 +22,27 @@
   color: #aaa;
   margin: 0 1rem;
 }
+
+@keyframes loading {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash {
+  background-color: var(--yellow);
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10rem;
+  animation: loading 1s ease-in-out 1s forwards;
+}
