--- a/css/screens/search.css
+++ b/css/screens/search.css
@@ -18,48 +18,48 @@
   font-size: 1.025rem;
 }
 
-.open-chat__header {
+.fan-chat__header {
   margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   color: #aaa;
 }
 
-.open-chat__content {
+.fan-chat__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.open-chat__content--title {
+.fan-chat__content--title {
   font-size: 1.125rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
-.open-chat__content--hashtags {
+.fan-chat__content--hashtags {
   text-transform: uppercase;
   opacity: 0.5;
 }
 
-.open-chat__content--members {
+.fan-chat__content--members {
   display: flex;
   align-items: center;
 }
 
-.open-chat__content--members img {
+.fan-chat__content--members img {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
   margin: 0.5rem;
 }
 
-.open-chat__content--member-count {
+.fan-chat__content--member-count {
   font-size: 0.875rem;
   opacity: 0.5;
 }
 
-.open-chat__content--members .divider {
+.fan-chat__content--members .divider {
   width: 1px;
   height: 1rem;
   background-color: #aaa;
@@ -67,21 +67,21 @@
   margin: 0 0.5rem;
 }
 
-.open-chat__content--members-status {
+.fan-chat__content--members-status {
   color: var(--yellow);
 }
 
-.open-chat__content--thumbnail {
+.fan-chat__content--thumbnail {
   position: relative;
 }
 
-.open-chat__content--thumbnail img {
+.fan-chat__content--thumbnail img {
   width: 7rem;
   height: 7rem;
   border-radius: 1rem;
 }
 
-.open-chat__content--like-count {
+.fan-chat__content--like-count {
   position: absolute;
   display: flex;
   align-items: center;
@@ -93,7 +93,39 @@
   right: 0.25rem;
 }
 
-.open-chat__content--like-count span {
+.fan-chat__content--like-count span {
   margin-left: 0.25rem;
   font-size: 0.75rem;
+}
+
+@keyframes heartBeat {
+  0% {
+    transform: scale(1);
+    color: #ff6865;
+  }
+
+  25% {
+    transform: scale(1.3);
+    color: #ff4f4b;
+  }
+
+  50% {
+    transform: scale(1);
+    color: #ff3632;
+  }
+
+  75% {
+    transform: scale(1.3);
+    color: #ff1d18;
+  }
+
+  100% {
+    transform: scale(1);
+    color: #ff0500;
+  }
+}
+
+.fan-chat__content--like-count:hover .fa-heart {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
 }
