--- a/css/screens/search.css
+++ b/css/screens/search.css
@@ -18,48 +18,48 @@
   font-size: 1.025rem;
 }
 
-.fan-chat__header {
+.open-chat__header {
   margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   color: #aaa;
 }
 
-.fan-chat__content {
+.open-chat__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.fan-chat__content--title {
+.open-chat__content--title {
   font-size: 1.125rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
-.fan-chat__content--hashtags {
+.open-chat__content--hashtags {
   text-transform: uppercase;
   opacity: 0.5;
 }
 
-.fan-chat__content--members {
+.open-chat__content--members {
   display: flex;
   align-items: center;
 }
 
-.fan-chat__content--members img {
+.open-chat__content--members img {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
   margin: 0.5rem;
 }
 
-.fan-chat__content--member-count {
+.open-chat__content--member-count {
   font-size: 0.875rem;
   opacity: 0.5;
 }
 
-.fan-chat__content--members .divider {
+.open-chat__content--members .divider {
   width: 1px;
   height: 1rem;
   background-color: #aaa;
@@ -67,21 +67,21 @@
   margin: 0 0.5rem;
 }
 
-.fan-chat__content--members-status {
+.open-chat__content--members-status {
   color: var(--yellow);
 }
 
-.fan-chat__content--thumbnail {
+.open-chat__content--thumbnail {
   position: relative;
 }
 
-.fan-chat__content--thumbnail img {
+.open-chat__content--thumbnail img {
   width: 7rem;
   height: 7rem;
   border-radius: 1rem;
 }
 
-.fan-chat__content--like-count {
+.open-chat__content--like-count {
   position: absolute;
   display: flex;
   align-items: center;
@@ -93,7 +93,7 @@
   right: 0.25rem;
 }
 
-.fan-chat__content--like-count span {
+.open-chat__content--like-count span {
   margin-left: 0.25rem;
   font-size: 0.75rem;
 }
@@ -125,7 +125,7 @@
   }
 }
 
-.fan-chat__content--like-count:hover .fa-heart {
+.open-chat__content--like-count:hover .fa-heart {
   will-change: transform;
   animation: heartBeat 1s linear infinite;
 }
